# memory-game

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
memory_game/: main.py  memory_game.py
src/memory_game/: entrypoint.py  main.py
