[project]
name = "memory-game"
version = "0.1.0"
description = "A simple memory game project on the GPIO of the Raspberry Pi."
authors = [
    {name = "Summer Salad", email = "summer.salad.games@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "memory_game", from = "src" }
]
requires-python = ">=3.11"
dependencies = [
    "gpiozero (>=2.0.1,<3.0.0)",
    "lgpio (>=0.2.2.0,<0.3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
